--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <input id="mk" placeholder="Mật khẩu" required><br><br>
   <input id="phone" placeholder="Số điện thoại" required><br><br>
   <input id="trangthai" placeholder="Trạng thái" required><br><br>
-  <input id="menhgia" placeholder="Mệnh giá" required><br><br>
+  <input id="menhgia" placeholder="Mệnh giá"><br><br>
 
   <button type="submit">Gửi dữ liệu</button>
 </form>
